# ttytheme

./: .travis.yml  Cargo.toml  README.md
src/: main.rs  options.rs  theme.rs
src/color/: de.rs  mod.rs  parse.rs
src/platform/: linux.rs  mod.rs
themes/: bright.toml  default.toml  snazzy.toml  solarized-dark.toml  solarized-light.toml
