[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
description = "A utility to set colors in the Linux framebuffer console."
homepage = "https://github.com/remexre/ttytheme"
license = "Apache-2.0/MIT"
name = "ttytheme"
repository = "https://github.com/remexre/ttytheme"
version = "0.1.2-alpha.0"

[dependencies]
failure = "0.1.1"
human-panic = "1.0.0"
log = "0.4.1"
serde = "1.0.58"
serde_derive = "1.0.58"
stderrlog = "0.4.0"
structopt = "0.2.8"
toml = "0.4.6"
